front-end/src/components/venues/OneVenue.scss
@import '../../assets/utils/_colors.scss';

.oneVenue {
    cursor: pointer;
    display: flex;
    width: 350px;
    color: $rose_quartz;
    text-align: center;
    align-items: center;
    border: 2px solid $noir;
    border-radius: 35px;
    background-color: $midnight_plum;
    padding: 5px;
    margin-bottom: 3em;

    &__venueName {
      color: $rose_quartz;
    }
    
    &__venueName:hover {
        text-decoration: underline;
    }

    &__venueImage {
        height: 200px;
        width: auto;
        max-width: 250px;
        border-radius: 20px;
        border: 3px solid $noir;
    }

    a {
      text-decoration: none;
      color: $rose_quartz;
      display: block;
      height: 100%;
    }

  }

  .oneVenue:hover {
    border: 2px solid $rose_quartz;
}

